# SPAMURAI

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  docker-compose.yml  package.json  scraper.py  security.py
.github/workflows/: ci.yml
backend/: .env.example  main.py  migrate.py  pyproject.toml  requirements.txt
backend/core/: config.py  plans.py  security.py
backend/models/: schema.py
backend/routers/: ai_chat.py  auth.py  gmail.py  plans.py  rules.py  subscriptions.py
backend/services/: ai_service.py  gmail_service.py
backend/workers/: scraper.py
frontend/: biome.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/trash/: page.tsx
frontend/components/dashboard/: ai-chat.tsx  category-tabs.tsx  classify-button.tsx  create-rule-dialog.tsx  delete-confirm-dialog.tsx  header.tsx  rules-modal.tsx  scan-progress.tsx  sender-detail-sheet.tsx  senders-table.tsx  stats-cards.tsx  subscription-dialog.tsx  theme-toggle.tsx
frontend/components/ui/: upgrade-gate.tsx
frontend/lib/: api.ts  categories.ts  types.ts
frontend/lib/hooks/: use-plan.ts
