[project]
name = "gmail-ai-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E","W","F","I","B","S","UP","N"]
ignore = ["S101","B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S","B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
